--- a/docs/style.css
+++ b/docs/style.css
@@ -4,13 +4,15 @@
     background-size: 400% 400%;
 }
 .green {
-    background:linear-gradient(90deg, rgba(29,0,36,1) 0%, rgba(14,145,22,1) 20%, rgba(13,137,46,1) 48%, rgba(0,255,42,1) 89%);
-    animation:gradient 10s linear  infinite;
+    background:radial-gradient(circle, rgba(44,255,5,1) 9%, rgba(36,138,43,1) 39%, rgba(31,144,61,1) 62%, rgba(0,255,42,1) 84%);
+    animation:gradient 15s ease infinite; 
+    animation-direction: alternate-reverse;
     background-size: 400% 400%;
 }
 .red {
-    background: linear-gradient(90deg, rgba(29,0,36,1) 0%, rgba(145,14,14,1) 35%, rgba(137,13,16,1) 48%, rgba(255,0,0,1) 89%);
+    background:radial-gradient(circle, rgba(255,0,0,1) 9%, rgba(136,19,19,1) 39%, rgba(116,20,20,1) 62%, rgba(255,0,0,1) 84%);
     animation:gradient 15s ease infinite;
+    animation-direction: alternate-reverse;
     background-size: 400% 400%;
 }
 @keyframes gradient {
@@ -37,18 +39,22 @@ text-align: center;
 }
 .checkbutton{
   text-align: center;
+  width: 50%;
+  margin: auto;
+  background: wheat;
+  border-radius: 80px;
 }
 .checkbutton>input{
   text-align: center;
-  width:13%;
+  width:20%;
   height: 50px;
   font-size: 50px;
   font-weight: bold;
   color:white;
-  background-color: transparent;
+  background-color:burlywood;;
   border: 2px solid white;
   border-radius: 15px;
-
+  text-shadow: 2px 1px black;
 }
 .desc {
     color:white;
@@ -102,7 +108,15 @@ h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
 }
+.container{
+  position: relative;
+  height: 100%;
+}
 
 .think{
-  width:15%;
+  max-width: 40%;
+  position: absolute;
+  height: 100%;
+  top: 2%;
+  right: 17%;
 }
